[package]
name = "network_discover"
version = "0.3.0"
edition = "2021"
authors = [ "Lukas (LukyLuke_ch) Zurschmiede <network-discover@ranta.ch>" ]


[dependencies]
local_net = { path = "./local_net" }
network = { path = "./network" }
config = { path = "./config" }
web = { path = "./web" }

actix-web = { version = "4" }
log = { version = "0.4" }
chrono = { version = "0.4" }
env_logger = { version = "0.9" }
