[package]
name = "network_discover"
version = "0.4.0"
edition = "2021"
authors = [ "Lukas Zurschmiede", "Reto Infanger" ]


[dependencies]
local_net = { path = "./local_net" }
network = { path = "./network" }
config = { path = "./config" }
web = { path = "./web" }

log = { version = "0.4" }
chrono = { version = "0.4" }
futures = { version = "0.3" }

uuid = { version = "1.4", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

actix-web = { version = "4" }
env_logger = { version = "0.10" }
