[package]
name = "config"
version = "0.3.0"
edition = "2021"
authors = [ "Lukas (LukyLuke_ch) Zurschmiede <network-discover@ranta.ch>" ]

[lib]
name = "config"
path = "src/lib.rs"

[dependencies]
log = { version = "0.4" }
confy = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
