[package]
name = "config"
version = "1.0.0"
edition = "2021"
authors = [ "Lukas (LukyLuke_ch) Zurschmiede <network-discover@ranta.ch>" ]

[lib]
name = "config"
path = "src/lib.rs"

[dependencies]
log = { version = "0.*" }

uuid = { version = "1.4", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

confy = { version = "0.5" }
