[package]
name = "db"
version = "0.3.0"
edition = "2021"
authors = [ "Lukas (LukyLuke_ch) Zurschmiede <network-discover@ranta.ch>" ]

[lib]
name = "db"
path = "src/lib.rs"

[dependencies]
sqlite = { path = "../sqlite" }

log = { version = "0.*" }
chrono = { version = "0.*" }

futures = { version = "0.*" }
sqlx = { version = "0.7", features = ["runtime-async-std-rustls", "uuid", "chrono"] }
