[package]
name = "export"
version = "0.1.0"
edition = "2021"
authors = [ "Lukas (LukyLuke_ch) Zurschmiede <network-discover@ranta.ch>" ]

[lib]
name = "export"
path = "src/lib.rs"

[dependencies]
config = { path = "../config" }
sqlite = { path = "../sqlite" }
db = { path = "../db" }

log = { version = "0.4" }
uuid = { version = "1", features = ["serde", "v4"] }

chrono = { version = "0.4" }
printpdf = { version = "0.5", features = [ "embedded_images", "svg" ] }
