[package]
name = "export"
version = "0.1.0"
edition = "2021"
authors = [ "Lukas (LukyLuke_ch) Zurschmiede <network-discover@ranta.ch>" ]

[lib]
name = "export"
path = "src/lib.rs"

[dependencies]
config = { path = "../config" }
sqlite = { path = "../sqlite" }
db = { path = "../db" }

log = { version = "0.*" }
chrono = { version = "0.*" }

uuid = { version = "1.4", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

printpdf = { version = "0.5", features = [ "embedded_images", "svg" ] }
