[package]
name = "network"
version = "0.1.0"
edition = "2021"
authors = [ "Lukas (LukyLuke_ch) Zurschmiede <network-discover@ranta.ch>" ]

[lib]
name = "network"
path = "src/lib.rs"

[dependencies]
config = { path = "../config" }
local_net = { path = "../local_net" }

log = { version = "0.4" }
#roxmltree = { version = "0.14.1" }
xml-rs = { version = "0.8" }
uuid = { version = "1", features = ["serde", "v4"] }
