[package]
name = "sqlite"
version = "0.1.0"
edition = "2021"
authors = [ "Lukas (LukyLuke_ch) Zurschmiede <network-discover@ranta.ch>" ]

[lib]
name = "sqlite"
path = "src/lib.rs"

[dependencies]
config = { path = "../config" }

sqlx = { version = "0.5", features = ["runtime-async-std-native-tls", "sqlite", "uuid", "migrate", "chrono"] }
chrono = { version = "0.4" }
futures = { version = "0.3" }
uuid = { version = "1", features = ["serde", "v4"] }

log = { version = "0.4" }
