[package]
name = "sqlite"
version = "0.1.0"
edition = "2021"
authors = [ "Lukas (LukyLuke_ch) Zurschmiede <network-discover@ranta.ch>" ]

[lib]
name = "sqlite"
path = "src/lib.rs"

[dependencies]
config = { path = "../config" }

log = { version = "0.*" }
chrono = { version = "0.*" }

futures = { version = "0.*" }
sqlx = { version = "0.7", features = ["runtime-async-std-rustls", "sqlite", "uuid", "migrate", "chrono"] }
