[package]
name = "web"
version = "0.2.0"
edition = "2021"
authors = [ "Lukas (LukyLuke_ch) Zurschmiede <network-discover@ranta.ch>" ]

[lib]
name = "web"
path = "src/lib.rs"

[dependencies]
config = { path = "../config" }
local_net = { path = "../local_net" }
network = { path = "../network" }
sqlite = { path = "../sqlite" }
db = { path = "../db" }
export = { path = "../export" }

actix-web = { version = "4" }
actix-files = { version = "0.6" }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["serde", "v4"] }
log = { version = "0.4" }
chrono = { version = "0.4" }
